fixed overflow on body

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -1,13 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-html{
-    font-size: 62.5%;
-    scroll-behavior: smooth;
+html {
+	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
-body{
-    overflow-x: hidden;
+body {
+	overflow: hidden;
 }
-
